<resources>
    <string name="app_name">Slot Machine</string>
    <string name="tvScoreString">Score:</string>
    <string name="tvScoreZero">0</string>
    <string name="btnStart">Start</string>
    <string name="btnHelp">Help</string>
    <string name="tvDifficulty">Difficulty Slider</string>
    <string name="tvInstructionHeader">Gameplay Instructions: </string>
    <string name="tvInstructions">1) Press the start button to start the reels! \n2) Press each stop button to stop each reel.</string>
    <string name="tvScoring">Scoring:</string>\
    <string name="tvScoreInstructions">50 Points: Three matching fruits. \n10 Points: Each cherry in a non-matching set. </string>
    <string name="btnMainGame">Main Game</string>
    <string name="btnStop">Stop</string>
    <string name="cDFruit">Content: Fruit Image</string>
    <string name="tvScore">%1$d</string>
</resources>
