<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvScore2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvScoreString"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/tvScorePoints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScorePoints"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvScoreZero"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvScore2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="239dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivReelOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/slotborder"
            android:src="@drawable/grape" />

        <ImageView
            android:id="@+id/ivReelTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/slotborder"
            android:src="@drawable/grape" />

        <ImageView
            android:id="@+id/ivReelThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/slotborder"
            android:src="@drawable/grape" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScore2">

        <Button
            android:id="@+id/btnReelOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonbackground"
            android:onClick="btnReelOne"
            android:text="@string/btnStop"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReelTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonbackground"
            android:onClick="btnReelTwo"
            android:text="@string/btnStop"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReelThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonbackground"
            android:onClick="btnReelThree"
            android:src="@drawable/grape"
            android:text="@string/btnStop"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonbackground"
        android:onClick="btnStart"
        android:text="@string/btnStart"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/buttonbackground"
        android:onClick="btnHelp"
        android:text="@string/btnHelp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tvDifficulty"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/seekbarDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHelp" />

    <SeekBar
        android:id="@+id/seekbarDifficulty"
        android:layout_width="272dp"
        android:layout_height="0dp"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="16dp"
        android:max="10"
        android:padding="20dp"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDifficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>